# llm-audit-logger

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
llm_audit_logger/: __init__.py  handler.py  schema.py  writer.py
tests/: test_audit_logger.py
