[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-audit-logger"
version = "0.1.0"
description = "Tamper-evident, compliance-ready audit trail for LangChain/LangGraph agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Sumit Giri" }]
keywords = ["llm", "audit", "compliance", "langchain", "langgraph", "osfi-e23", "eu-ai-act"]
dependencies = []  # zero-dependency core

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sumitgiri87/llm-audit-logger"

[tool.setuptools]
packages = ["llm_audit_logger"]
